--- a/app/src/main/res/layout/activity_daftarguru.xml
+++ b/app/src/main/res/layout/activity_daftarguru.xml
@@ -18,7 +18,7 @@
         app:layout_constraintVertical_bias="0.0">
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/ButtonMasuk"
             android:layout_width="48dp"
             android:layout_height="20dp"
             android:layout_marginEnd="72dp"
@@ -34,19 +34,19 @@
 
         <TextView
             android:id="@+id/textView7"
-            android:layout_width="278dp"
+            android:layout_width="125dp"
             android:layout_height="20dp"
             android:gravity="center|start"
             android:text="Sudah punya akun?"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.791"
+            app:layout_constraintHorizontal_bias="0.383"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.974" />
 
         <Button
-            android:id="@+id/button6"
+            android:id="@+id/TombolDaftar"
             android:layout_width="360dp"
             android:layout_height="55dp"
             android:backgroundTint="#1F2937"
@@ -89,7 +89,7 @@
             app:layout_constraintVertical_bias="0.604" />
 
         <EditText
-            android:id="@+id/editTextText2"
+            android:id="@+id/NamaDaftar"
             android:layout_width="360dp"
             android:layout_height="55dp"
             android:background="@drawable/input_kotak"
@@ -105,7 +105,7 @@
             app:layout_constraintVertical_bias="0.534" />
 
         <EditText
-            android:id="@+id/editTextTextEmailAddress"
+            android:id="@+id/EmailDaftar"
             android:layout_width="360dp"
             android:layout_height="55dp"
             android:background="@drawable/input_kotak"
