--- a/app/src/main/res/layout/activity_sign_in_eletter.xml
+++ b/app/src/main/res/layout/activity_sign_in_eletter.xml
@@ -20,7 +20,7 @@
         app:srcCompat="@drawable/or_section" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress2"
+        android:id="@+id/KataSandi"
         android:layout_width="360dp"
         android:layout_height="55dp"
         android:background="@drawable/input_kotak"
@@ -36,7 +36,7 @@
         app:layout_constraintVertical_bias="0.52" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress3"
+        android:id="@+id/TextID"
         android:layout_width="360dp"
         android:layout_height="55dp"
         android:background="@drawable/input_kotak"
@@ -100,7 +100,7 @@
         app:layout_constraintVertical_bias="0.592" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/TombolMasuk"
         android:layout_width="360dp"
         android:layout_height="55dp"
         android:backgroundTint="#1F2937"
@@ -125,7 +125,7 @@
         app:layout_constraintVertical_bias="0.825" />
 
     <TextView
-        android:id="@+id/textView16"
+        android:id="@+id/BtnDaftar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Belum punya akun?"
