--- a/app/src/main/res/layout/activity_sign_in_eletter.xml
+++ b/app/src/main/res/layout/activity_sign_in_eletter.xml
@@ -41,7 +41,7 @@
         app:layout_constraintVertical_bias="0.415" />
 
     <TextView
-        android:id="@+id/textView17"
+        android:id="@+id/TextDaftar"
         android:layout_width="105dp"
         android:layout_height="57dp"
         android:backgroundTint="#375FE5"
